log
Sun, May 18, 2025  6:05:45 PM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|5
total_score: 0/70
3f0e54c
Sun, May 18, 2025  6:06:10 PM: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  2|4
total_score: 15/70
b108ca3
Sun, May 18, 2025  6:08:56 PM: 
 sudoku.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:67:27: error: expected ';' before ':' token
     for(fila = 0; fila < 9: fila++)
                           ^
sudoku.c:70:7: error: expected ',' or ';' before 'if'
       if(numero != 0)
       ^~
sudoku.c:69:11: error: unused variable 'numero' [-Werror=unused-variable]
       int numero = n->sudo[fila][columna]
           ^~~~~~
sudoku.c:66:9: error: unused variable 'revisados' [-Werror=unused-variable]
     int revisados[10] = {0};
         ^~~~~~~~~
sudoku.c:48:10: error: unused variable 'j' [-Werror=unused-variable]
   int i, j ;
          ^
sudoku.c:48:7: error: unused variable 'i' [-Werror=unused-variable]
   int i, j ;
       ^
cc1.exe: all warnings being treated as errors
9a14937
Sun, May 18, 2025  6:09:06 PM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:66:27: error: expected ';' before ':' token
     for(fila = 0; fila < 9: fila++)
                           ^
sudoku.c:69:7: error: expected ',' or ';' before 'if'
       if(numero != 0)
       ^~
sudoku.c:68:11: error: unused variable 'numero' [-Werror=unused-variable]
       int numero = n->sudo[fila][columna]
           ^~~~~~
sudoku.c:65:9: error: unused variable 'revisados' [-Werror=unused-variable]
     int revisados[10] = {0};
         ^~~~~~~~~
cc1.exe: all warnings being treated as errors
084abc7
Sun, May 18, 2025  6:09:31 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:66:27: error: expected ';' before ':' token
     for(fila = 0; fila < 9: fila++)
                           ^
sudoku.c:69:7: error: expected ',' or ';' before 'if'
       if(numero != 0)
       ^~
sudoku.c:68:11: error: unused variable 'numero' [-Werror=unused-variable]
       int numero = n->sudo[fila][columna]
           ^~~~~~
sudoku.c:65:9: error: unused variable 'revisados' [-Werror=unused-variable]
     int revisados[10] = {0};
         ^~~~~~~~~
cc1.exe: all warnings being treated as errors
24de529
Sun, May 18, 2025  6:09:57 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
a4d8a48
Sun, May 18, 2025  6:12:09 PM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:81:18: error: 'nodo' undeclared (first use in this function)
     printf("%d ",nodo->sudo[i][j]);
                  ^~~~
sudoku.c:81:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:80:9: error: variable 'j' set but not used [-Werror=unused-but-set-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:79:9: error: variable 'i' set but not used [-Werror=unused-but-set-variable]
     int i=3*(k/3) + (p/3) ;
         ^
cc1.exe: all warnings being treated as errors
a2d3c5a
Sun, May 18, 2025  6:12:21 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:81:18: error: 'nodo' undeclared (first use in this function)
     printf("%d ",nodo->sudo[i][j]);
                  ^~~~
sudoku.c:81:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:80:9: error: variable 'j' set but not used [-Werror=unused-but-set-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:79:9: error: variable 'i' set but not used [-Werror=unused-but-set-variable]
     int i=3*(k/3) + (p/3) ;
         ^
sudoku.c:48:10: error: unused variable 'j' [-Werror=unused-variable]
   int i, j;
          ^
sudoku.c:48:7: error: unused variable 'i' [-Werror=unused-variable]
   int i, j;
       ^
cc1.exe: all warnings being treated as errors
a0b2dd6
Sun, May 18, 2025  6:13:21 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:81:18: error: 'nodo' undeclared (first use in this function)
     printf("%d ",nodo->sudo[i][j]);
                  ^~~~
sudoku.c:81:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:80:9: error: variable 'j' set but not used [-Werror=unused-but-set-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:79:9: error: variable 'i' set but not used [-Werror=unused-but-set-variable]
     int i=3*(k/3) + (p/3) ;
         ^
sudoku.c:77:10: error: unused variable 'j' [-Werror=unused-variable]
   int i, j, k, p;
          ^
sudoku.c:77:7: error: unused variable 'i' [-Werror=unused-variable]
   int i, j, k, p;
       ^
cc1.exe: all warnings being treated as errors
e767f1a
Sun, May 18, 2025  6:13:44 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:81:18: error: 'nodo' undeclared (first use in this function)
     printf("%d ",nodo->sudo[i][j]);
                  ^~~~
sudoku.c:81:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:80:9: error: variable 'j' set but not used [-Werror=unused-but-set-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:79:9: error: variable 'i' set but not used [-Werror=unused-but-set-variable]
     int i=3*(k/3) + (p/3) ;
         ^
cc1.exe: all warnings being treated as errors
f1f5673
Sun, May 18, 2025  6:14:30 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:81:18: error: 'nodo' undeclared (first use in this function)
     printf("%d ",nodo->sudo[i][j]);
                  ^~~~
sudoku.c:81:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:80:9: error: variable 'j' set but not used [-Werror=unused-but-set-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:79:9: error: variable 'i' set but not used [-Werror=unused-but-set-variable]
     int i=3*(k/3) + (p/3) ;
         ^
sudoku.c:77:10: error: unused variable 'j' [-Werror=unused-variable]
   int i, j, k, p;
          ^
sudoku.c:77:7: error: unused variable 'i' [-Werror=unused-variable]
   int i, j, k, p;
       ^
cc1.exe: all warnings being treated as errors
57c7408
Sun, May 18, 2025  6:14:51 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:77:10: error: unused variable 'j' [-Werror=unused-variable]
   int i, j, k, p;
          ^
sudoku.c:77:7: error: unused variable 'i' [-Werror=unused-variable]
   int i, j, k, p;
       ^
sudoku.c:79:15: error: 'k' may be used uninitialized in this function [-Werror=maybe-uninitialized]
     int i=3*(k/3) + (p/3) ;
             ~~^~~
cc1.exe: all warnings being treated as errors
407759c
